Add repository layer with AsyncNotifiers and Supabase integration (#6)
* I made all repos and linked them with the viewmodels, and with Supabase

* New Version adding .when and async notifiers

* Adding async notifiers and use .when method

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   audioplayers: ^6.0.0 
   uuid: ^4.4.0
   timeago: ^3.6.1
+  supabase_flutter: ^2.5.6
 
 dev_dependencies:
   flutter_test:
